# agent-work-review

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  SECURITY.md  install.ps1  install.py  install.sh  pyproject.toml  update.ps1  update.sh  version.json
.github/workflows/: ci.yml
agent-guides/: codex.md  generic-agent.md  hermes.md  opencode.md  workbuddy.md
schemas/: review-workspace.schema.json  work-evidence.schema.json  work-summary.schema.json
scripts/: verify_chinese_output.py  verify_installed_draft_workflow.py
skills/agent-work-review/: SKILL.md
skills/agent-work-review/agents/: openai.yaml
skills/agent-work-review/references/: drafting-guide.md  value-judgment.md
skills/work-review-ppt-summary/: SKILL.md
skills/work-review-ppt-summary/agents/: openai.yaml
skills/work-review-ppt-summary/references/: output_schema.md  review_modes.md
skills/work-review-ppt-summary/scripts/: build_review_summary.py  collect_session_candidates.py  import_agent_evidence.py  init_local_review.py  local_identity.py  merge_work_evidence.py  prepare_guizang_brief.py
skills/work-review-ppt-summary/tests/: test_pipeline.py
skills/work-review-ppt-summary/tests/fixtures/sessions/2026/07/01/: rollout-2026-07-01T10-00-00-session-a.jsonl
src/agent_work_review/: __init__.py  cli.py  drafts.py  identity.py  locales.py  pipeline.py  renderer.py  review_sessions.py  storage.py
src/agent_work_review/adapters/: __init__.py  base.py  codex.py  generic.py
tests/: test_codex_adapter.py  test_end_to_end.py  test_review_workspaces.py
(+1 files in other folders)
